# qm_ho_control

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml  test
config/: config.yml
include/: Controller.h  DataLog.h  Estimator.h  GaitGenerator.h  GaitSchedule.h  HoControl.h  HoQp.h  IOWebots.h  Planner.h  Task.h  cheat_estimator.hpp  controller.hpp  ctrl_component.hpp  foot_planner.hpp  gait_schedule.hpp  hierarchical_qp.hpp  hierarchical_wbc.hpp  interpolator.hpp  kalman_filter_estimator.hpp  kinematics_mpc.hpp  pinocchio_interface.hpp  planner.hpp  position_controller.hpp  ros2_interface.hpp  task.hpp  terrain_estimator.hpp  webots_interface.hpp
include/common/: HighCmd.h  LowCmd.h  LowState.h  enumClass.h  enum_class.hpp  low_cmd.hpp  low_state.hpp  mathTools.h  mathTypes.h  projectPath.h  projectPath.h.in  types.hpp
include/model/: Arm.h  QuadrupedArmRobot.h  QuadrupedLeg.h  WholeBodyDynamics.h
include/utils/: cubic_spline.hpp  logger.hpp  math_tools.hpp  projectPath.hpp  project_path.hpp  yaml_loader.hpp
log/: 2024_09_12_23_46_05.csv  2024_09_13_00_01_55.csv  2024_09_13_00_08_57.csv  2024_09_13_00_26_30.csv  2024_09_13_00_26_57.csv  2024_09_13_00_27_17.csv  2024_09_13_00_27_40.csv  2024_09_13_00_28_03.csv  2024_09_13_00_28_56.csv  2024_09_13_00_30_01.csv  2024_09_13_00_30_58.csv  2024_09_13_00_31_35.csv  2024_09_13_00_32_16.csv  2024_09_13_00_32_45.csv  2024_09_13_00_33_03.csv  2024_09_13_00_33_33.csv  2024_09_13_00_33_48.csv  2024_09_13_00_35_48.csv  2024_09_13_00_39_48.csv  2024_09_13_00_47_31.csv  2024_09_13_00_48_10.csv  2024_09_13_00_48_33.csv  2024_09_13_00_48_59.csv  2024_09_13_00_49_36.csv
src/: Controller.cpp  DataLog.cpp  Estimator.cpp  GaitGenerator.cpp  GaitSchedule.cpp  HoControl.cpp  HoQp.cpp  IOWebots.cpp  Planner.cpp  cheat_estimator.cpp  controller.cpp  foot_planner.cpp  gait_schedule.cpp  hierarchical_qp.cpp  hierarchical_wbc.cpp  interpolator.cpp  kalman_filter_estimator.cpp  kinematics_mpc.cpp  main.cpp  pinocchio_interface.cpp  planner.cpp  position_controller.cpp  ros2_interface.cpp  terrain_estimator.cpp  webots_interface.cpp
src/model/: Arm.cpp  QuadrupedArmRobot.cpp  QuadrupedLeg.cpp  WholeBodyDynamics.cpp
src/utils/: cubic_spline.cpp  logger.cpp
urdf/: aliengoZ1_newGrip.urdf  bqr3_arm _reduced.urdf  bqr3_arm_noleg.srdf  bqr3_arm_noleg.urdf  galileo_mini_x5.urdf  galileo_v1d6_x5.urdf  z1_newGrip.urdf
